# html-cleaning

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: cleaner.rs  dedup.rs  dom.rs  error.rs  lib.rs  links.rs  markdown.rs  options.rs  presets.rs  text.rs  tree.rs
tests/: integration_test.rs
