[package]
name = "html-cleaning"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["rs-trafilatura contributors"]
description = "HTML cleaning, sanitization, and text processing utilities"
documentation = "https://docs.rs/html-cleaning"
homepage = "https://github.com/Murrough-Foley/html-cleaning"
repository = "https://github.com/Murrough-Foley/html-cleaning"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["html", "sanitization", "cleaning", "text-processing", "dom"]
categories = ["parser-implementations", "text-processing", "web-programming"]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
]

[features]
default = ["presets"]
presets = []
regex = ["dep:regex"]
url = ["dep:url"]
full = ["presets", "regex", "url"]

[dependencies]
dom_query = "0.24"
thiserror = "2.0"
regex = { version = "1.11", optional = true }
url = { version = "2.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
needless_raw_string_hashes = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
